[tool.poetry]
name = "signet"
version = "0.1.0"
description = ""
authors = ["Deepak Duggirala <deepakduggi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
flask = "^2.3.2"
flask-sqlalchemy = "^3.0.5"
authlib = "^1.2.1"
psycopg2 = "^2.9.6"
gunicorn = "^20.1.0"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
